--- a/styles/globals.css
+++ b/styles/globals.css
@@ -64,7 +64,7 @@
 }
 @layer base {
   input{
-    @apply outline-0 focus:outline-1 invalid:outline-red-500 focus:outline-tgcc-400
+    @apply border border-neutral-200 h-11 rounded-md px-2 outline-0 focus:outline-1 invalid:outline-red-500 focus:outline-tgcc-400
   }
 }
 
