--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,7 +16,7 @@
   --color-tgcc-700: #c73407;
   --color-tgcc-800: #9e2a0e;
   --color-tgcc-900: #7f260f;
-  --color-tgcc-950: #450f05;
+  --color-tgcc-950: #0E0301;
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
@@ -57,7 +57,7 @@
 
 @layer components {
   .button {
-    @apply rounded-md bg-white cursor-pointer flex items-center px-2 gap-2    border-neutral-300/40 shadow-neutral-100/55;
+    @apply rounded-md  bg-white cursor-pointer flex items-center px-2 gap-2    border-neutral-300/40 shadow-neutral-100/55;
   }
   .input {
     @apply border border-neutral-200 h-11 rounded-md px-2 outline-0 focus:outline-1 invalid:outline-red-500 focus:outline-tgcc-400;
