--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,17 +6,19 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
-  --color-tgcc-50: #fff6ed;
-  --color-tgcc-100: #ffebd4;
-  --color-tgcc-200: #ffd2a8;
-  --color-tgcc-300: #ffb270;
-  --color-tgcc-400: #ff8537;
-  --color-tgcc-500: #ff6a19;
-  --color-tgcc-600: #f04906;
-  --color-tgcc-700: #c73407;
-  --color-tgcc-800: #9e2a0e;
-  --color-tgcc-900: #7f260f;
-  --color-tgcc-950: #0E0301;
+  --color-tgcc-50: #ecf5ff;
+--color-tgcc-100: #dcecff;
+--color-tgcc-200: #c0dbff;
+--color-tgcc-300: #9ac2ff;
+--color-tgcc-400: #719cff;
+--color-tgcc-500: #5078ff;
+--color-tgcc-600: #3754fa;
+--color-tgcc-700: #253ddd;
+--color-tgcc-800: #2136b2;
+--color-tgcc-900: #23358c;
+--color-tgcc-950: #151e51;
+
+
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
@@ -57,7 +59,7 @@
 
 @layer components {
   .button {
-    @apply rounded-md  bg-white cursor-pointer flex items-center px-2 gap-2    border-neutral-300/40 shadow-neutral-100/55;
+    @apply rounded-md border   bg-white cursor-pointer flex items-center px-2 gap-2    border-neutral-300/40 shadow-neutral-100/55;
   }
   .input {
     @apply border border-neutral-200 h-11 rounded-md px-2 outline-0 focus:outline-1 invalid:outline-red-500 focus:outline-tgcc-400;
